2007-01-13  Tommi Vainikainen  <thv@iki.fi>

	* app/diagram_tree_window.c (diagram_tree_window_new): "Diagram
	Tree" window title is now shown as translated.

2007-01-09  Hans Breuer  <hans@breuer.org>

	* objects/UML/class.c : comments were not considered for connection
	point placement. Patch from Vadim Zelenin, fixes bug #342086

2007-01-06  Hans Breuer  <hans@breuer.org>

	* plug-ins/python/Makefile.am : EXTRA_DIST += bbox.py

	* dia.desktop.in : 'svn mv dia.desktop.in dia.desktop.in.in'
	  configure.in : add dia.desktop.in to AC_OUTPUT
	  Makefile.am : changed rule for .desktop handling. Together this 
	should resolve @VERSION@ in the dia.desktop file and thus gives us
	version info via bug-buddy automatically. 
	This is more important with bug-buddy 2.16 cause there the user can
	not manually adapt the version anymore. Hopefully fixes bug #393618 
	(see also bug #348827)

	* plug-ins/python/bbox.py : draws bounding boxes of the objects in the
	active layer into a new layer. Helps analyzing the font size problems.

	* acinclude.m4 : deduce py_config_dir from py_prefix, helps GARNOME
	and seems not to break anything (tested on Fedora and Gentoo)
	Joseph Sacco, bug #338368

	* plug-ins/python/pydia-property.c : finally implemented 
	getters/setters for LengthProperty and FontsizeProperty. (We really
	should take g_warning more serious, this one was
	WARNING **: No handler for type 'length')

	* plug-ins/xslt/xslt.c : don't use g_warning but message_error for 
	"No valid configuration files found for the XSLT plugin, not loading."

2007-01-05  Hans Breuer  <hans@breuer.org>

	* objects/standard/line.c : fix typo in save_arrow(), patch from
	Michael Duelli closing bug #393201

	* app/dia-win-remote.c app/paginate_gdiprint.cpp app/win32print.c
	  lib/dia_dirs.c lib/font.c plug-ins/wmf/wmf.cpp : 
	#define WIN32_MEAN_AND_LEAN before windows.h inclusion where ever 
	possible to reduce namespace clashes

2007-01-03  Hans Breuer  <hans@breuer.org>
